Envia valores de uma activity para outra

--- a/Aula0401/app/src/main/res/layout/activity_main.xml
+++ b/Aula0401/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="89dp"
                 android:id="@+id/listaPares"
-                android:layout_weight="1" />
+                android:layout_weight="0.01" />
 
         </LinearLayout>
 
@@ -80,6 +80,21 @@
                 android:layout_height="106dp"
                 android:id="@+id/listaImpares"
                 android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Contar"
+                android:id="@+id/button"
+                android:singleLine="true"
+                android:onClick="abreResultado" />
         </LinearLayout>
     </LinearLayout>
 
